--- a/game3.html
+++ b/game3.html
@@ -10,6 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;600;700&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;600;700&family=Noto+Sans:wght@600;800&family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="row">
@@ -53,7 +59,7 @@
     <div class="container game">
         <div class="row mt-5">
             <div class="col-md-9 mt-5 text-center">
-                <h1 class="text-center">Hangman Game</h1>
+                <h1 class="text-center javaTittleGames fw-semibold">Hangman Game</h1>
                 <div class="game3">
                     <div id="options-container"></div>
                         <div id="letter-container" class="letter-container hide"></div>
@@ -65,7 +71,7 @@
                     </div>
                 </div>
 
-                <div class="other-games mt-3">
+                <!-- <div class="other-games mt-3">
                     <div class="game-1">
                         <a href="game1.html"><img src="img/game1.jpg" alt=""></a>
                         <h4>Guess The Number</h4>
@@ -82,11 +88,58 @@
                         <img src="img/game4.png" alt="">
                         <h4>Typing Game</h4>
                     </div>
+                </div> -->
+
+
+                <div class="container">
+                    <div class="row">
+                        <div class="row row-cols-1 row-cols-md-5 g-2">
+
+                            <div class="col">
+                                <div class="card border border-0">
+                                  <a href="game1.html"> <img src="img/game1.jpg" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Guess The Number</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+
+                              <div class="col">
+                                <div class="card border border-0">
+                                    <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col">
+                                <div class="card border border-0">
+                                    <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col">
+                                <div class="card border border-0">
+                                    <a href="game1.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+                        </div>
+                    </div>
                 </div>
+
             </div>
             
             <div class="col-md-3 mt-5">
-                <div class="side-1">
+                <!-- <div class="side-1">
                     <div class="game-1">
                         <a href="game1.html"><img src="img/game1.jpg" alt=""></a>
                         <h4>Guess The Number</h4>
@@ -95,7 +148,32 @@
                         <a href="game2.html"><img src="img/game2.png" alt=""></a>
                         <h4>Word Scramble</h4>
                     </div>
+                </div> -->
+
+                <div class="row mt-5">
+                    <div class="row g-2 ps-2">
+                        
+                        <div class="col">
+                            <div class="card border border-0">
+                                <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                              <div class="card-body bgName p-1">
+                                <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="col-md-6">
+                            <div class="card border border-0">
+                                <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                              <div class="card-body bgName p-1">
+                                <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
+                              </div>
+                            </div>
+                          </div>
+
+                    </div>
                 </div>
+
                 <div class="side-2 mt-5">
                     <div class="ad-1">
                         <img src="img/ad1.gif" alt="">
@@ -109,9 +187,9 @@
         </div>
     </div>
 
-    <section class="footer bg-dark">
-        <div class="row mt-5">
-            <div class="col-md-12 p-2">
+    <section class="footer ">
+        <div class="row mt-3">
+            <div class="col-md-12 p-2 mt-2">
                 <p class="text-center text-light">Copyright © 2023 All Rights Reserved by Mini-games.</p>
             </div>
         </div>
