Push (not final)
Bounce in effect, Bubble effect. For back up lng muna temporary

--- a/game1.html
+++ b/game1.html
@@ -61,12 +61,30 @@
                 <div>
                     <h1 class="text-center javaTittleGames fw-semibold">Guess the Number</h1>
                     <div class="game1">
-                        <p class="text-center text-light">Guess a number between 1 and 100:</p>
+                        <p class="text-center text-light">Guess a number between 1 and 10</p>
                         <input type="number" id="guess" class="form-control" min="1" max="100" required>
                         <br>
                         <button type="submit" id="submit" class="btn btn-primary">Submit</button>
                         <br>
                         <p id="message"></p>
+
+                        <div class="testCode">
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                            <div><span class="dot"></span></div>
+                          </div>
                     </div>
                 </div>
 
