--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                 <div class="row">
                     <div class="row row-cols-1 row-cols-md-6 g-2">
 
-                        <div class="col">
-                          <div class="card border border-0">
+                        <div class="col ">
+                          <div class="card gameCol">
                             <a href="game1.html"> <img src="img/game1.jpg" class="card-img-top" alt="..."></a>
                             <div class="card-body bgName p-1">
                               <h5 class="card-title fs-6 text-center gameTittle">Guess The Number</h5>
@@ -97,7 +97,7 @@
                         </div>
 
                         <div class="col">
-                            <div class="card border border-0">
+                            <div class="card gameCol">
                                 <a href="game2.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
                                 <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
@@ -106,7 +106,7 @@
                           </div>
 
                           <div class="col">
-                            <div class="card border border-0">
+                            <div class="card gameCol">
                                 <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
                                 <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
@@ -115,7 +115,7 @@
                           </div>
 
                           <div class="col">
-                            <div class="card border border-0">
+                            <div class="card gameCol">
                                 <a href="game1.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
                                 <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
