--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <div class="offcanvas-body">
                             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                                 <li class="nav-item">
-                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                                 </li>
                                 <!-- <li class="nav-item">
                                     <a class="nav-link" href="#">Link</a>
@@ -113,10 +113,9 @@
                               </div>
                             </div>
                           </div>
-
                           <div class="col">
                             <div class="card gameCol">
-                                <a href="game1.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
                                 <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                               </div>
