Push (grace request)
pa check

--- a/game3.html
+++ b/game3.html
@@ -95,8 +95,8 @@
                     <div class="row">
                         <div class="row row-cols-1 row-cols-md-5 g-2">
 
-                            <div class="col">
-                                <div class="card border border-0">
+                            <div class="col ">
+                                <div class="card gameCol">
                                   <a href="game1.html"> <img src="img/game1.jpg" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Guess The Number</h5>
@@ -106,8 +106,8 @@
 
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game2.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
                                   </div>
@@ -115,17 +115,26 @@
                               </div>
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
-                                    <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                    <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
                                   </div>
                                 </div>
                               </div>
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col">
+                                <div class="card gameCol">
+                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                                   </div>
@@ -154,19 +163,19 @@
                     <div class="row g-2 ps-2">
                         
                         <div class="col">
-                            <div class="card border border-0">
-                                <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                            <div class="card gameCol">
+                                <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
-                                <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
                               </div>
                             </div>
                           </div>
 
-                          <div class="col-md-6">
-                            <div class="card border border-0">
-                                <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                          <div class="col">
+                            <div class="card gameCol">
+                                <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
-                                <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
+                                <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                               </div>
                             </div>
                           </div>
