--- a/game2.html
+++ b/game2.html
@@ -63,9 +63,15 @@
                     <h1 class="text-center javaTittleGames fw-semibold">Word Scramble</h1>
                     <div class="game2">
                         <div id="scrambled-word"></div>
-                        <input type="text" id="user-input">
+                        <!-- <input type="text" id="user-input"> -->
+
+                        <div class="input-group input-group-lg">
+                            <input type="text" id="user-input" class="form-control text-center fw-bold" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" required>
+                        </div>
+
                         <br>
-                        <button id="submit-button" class="mt-3">Submit</button>
+                        <!-- <button id="submit-button" class="mt-3">Submit</button> -->
+                        <button id="submit-button" class="btn btn-outline-info px-5 mt-3">Submit</button>
                     </div>
                 </div>
 
@@ -93,8 +99,8 @@
                     <div class="row">
                         <div class="row row-cols-1 row-cols-md-5 g-2">
 
-                            <div class="col">
-                                <div class="card border border-0">
+                            <div class="col ">
+                                <div class="card gameCol">
                                   <a href="game1.html"> <img src="img/game1.jpg" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Guess The Number</h5>
@@ -104,8 +110,8 @@
 
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game2.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
                                   </div>
@@ -113,17 +119,26 @@
                               </div>
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
-                                    <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                    <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
                                   </div>
                                 </div>
                               </div>
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col">
+                                <div class="card gameCol">
+                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                                   </div>
@@ -151,19 +166,19 @@
                     <div class="row g-2 ps-2">
                         
                         <div class="col">
-                            <div class="card border border-0">
-                                <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                            <div class="card gameCol">
+                                <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
-                                <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
                               </div>
                             </div>
                           </div>
 
-                          <div class="col-md-6">
-                            <div class="card border border-0">
-                                <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                          <div class="col">
+                            <div class="card gameCol">
+                                <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
-                                <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
+                                <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                               </div>
                             </div>
                           </div>
@@ -195,6 +210,7 @@
 
 
 <script src="game2.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     
 </body>
