--- a/game4.html
+++ b/game4.html
@@ -61,7 +61,7 @@
             <div class="col-md-9 mt-5 text-center">
                 <h1 class="text-center javaTittleGames fw-semibold">Typing Game</h1>
                 <div class="game4">
-                    <p class="lead text-white">type the given word within
+                    <p class="lead text-white">Type the given word within
                         <span class="text-success" id="seconds">5</span>
                         Seconds:
                     </p>
@@ -119,8 +119,8 @@
                     <div class="row">
                         <div class="row row-cols-1 row-cols-md-5 g-2">
 
-                            <div class="col">
-                                <div class="card border border-0">
+                            <div class="col ">
+                                <div class="card gameCol">
                                   <a href="game1.html"> <img src="img/game1.jpg" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Guess The Number</h5>
@@ -130,8 +130,8 @@
 
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game2.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
                                   </div>
@@ -139,17 +139,26 @@
                               </div>
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
-                                    <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                    <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
                                   </div>
                                 </div>
                               </div>
 
                               <div class="col">
-                                <div class="card border border-0">
-                                    <a href="game1.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                <div class="card gameCol">
+                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                  <div class="card-body bgName p-1">
+                                    <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
+                                  </div>
+                                </div>
+                              </div>
+
+                              <div class="col">
+                                <div class="card gameCol">
+                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
                                     <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                                   </div>
@@ -178,19 +187,19 @@
                     <div class="row g-2 ps-2">
                         
                         <div class="col">
-                            <div class="card border border-0">
-                                <a href="game1.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
+                            <div class="card gameCol">
+                                <a href="game3.html"> <img src="img/game3.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
-                                <h5 class="card-title fs-6 text-center gameTittle">Hangman</h5>
+                                <h5 class="card-title  fs-6 text-center gameTittle">Hangman</h5>
                               </div>
                             </div>
                           </div>
 
-                          <div class="col-md-6">
-                            <div class="card border border-0">
-                                <a href="game1.html"> <img src="img/game2.png" class="card-img-top" alt="..."></a>
+                          <div class="col">
+                            <div class="card gameCol">
+                                <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
                               <div class="card-body bgName p-1">
-                                <h5 class="card-title fs-6 text-center gameTittle">Word Scramble</h5>
+                                <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
                               </div>
                             </div>
                           </div>
