--- a/game1.html
+++ b/game1.html
@@ -61,19 +61,19 @@
                 <div>
                     <h1 class="text-center javaTittleGames fw-semibold">Guess the Number</h1>
                     <div class="game1">
-                        <p class=" lead text-center text-light">Guess a number between 1 and 10</p>
+                        <div class="game1-content">
+                            <p class=" lead text-center text-light">Guess a number between 1 and 10</p>
                     
-                        <div class="input-group input-group-lg">
-                            <input type="number" id="guess" class="form-control text-center fw-bold" min="1" max="10" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" required>
+                            <div class="input-group input-group-lg">
+                                <input type="number" id="guess" class="form-control text-center fw-bold" min="1" max="10" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" required>
+                            </div>
+
+                            <br>
+                            <!-- <button type="submit" id="submit" class="btn btn-primary">Submit</button> -->
+                            <button type="submit" id="submit" class="btn btn-outline-info px-5">Submit</button>
+                            <br>
+                            <p id="message" class="mt-4 fs-5 msg"></p>
                         </div>
-
-                        <br>
-                        <!-- <button type="submit" id="submit" class="btn btn-primary">Submit</button> -->
-                        <button type="submit" id="submit" class="btn btn-outline-info px-5">Submit</button>
-                        <br>
-                        <p id="message" class="mt-4 fs-5"></p>
-
-                        
                     </div>
                 </div>
 
