--- a/game2.html
+++ b/game2.html
@@ -62,16 +62,19 @@
                 <div>
                     <h1 class="text-center javaTittleGames fw-semibold">Word Scramble</h1>
                     <div class="game2">
-                        <div id="scrambled-word"></div>
-                        <!-- <input type="text" id="user-input"> -->
+                        <div class="game2-content">
+                        
+                            <div id="scrambled-word"></div>
+                            <!-- <input type="text" id="user-input"> -->
 
-                        <div class="input-group input-group-lg">
-                            <input type="text" id="user-input" class="form-control text-center fw-bold" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" required>
+                            <div class="input-group input-group-lg">
+                                <input type="text" id="user-input" class="form-control text-center fw-bold" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" required>
+                            </div>
+
+                            <br>
+                            <!-- <button id="submit-button" class="mt-3">Submit</button> -->
+                            <button id="submit-button" class="btn btn-outline-info px-5 mt-3">Submit</button>
                         </div>
-
-                        <br>
-                        <!-- <button id="submit-button" class="mt-3">Submit</button> -->
-                        <button id="submit-button" class="btn btn-outline-info px-5 mt-3">Submit</button>
                     </div>
                 </div>
 
