--- a/game3.html
+++ b/game3.html
@@ -61,13 +61,15 @@
             <div class="col-md-9 mt-5 text-center">
                 <h1 class="text-center javaTittleGames fw-semibold">Hangman Game</h1>
                 <div class="game3">
-                    <div id="options-container"></div>
+                    <div class="game3-content">
+                        <div id="options-container"></div>
                         <div id="letter-container" class="letter-container hide"></div>
                         <div id="user-input-section"></div>
                         <canvas id="canvas"></canvas>
-                    <div id="new-game-container" class="hide">
-                        <div id="result-text" class="text-light mt-3"></div>
-                        <button id="new-game-button">New Game</button>
+                        <div id="new-game-container" class="hide">
+                            <div id="result-text" class="text-light mt-3"></div>
+                            <button id="new-game-button">New Game</button>
+                        </div>
                     </div>
                 </div>
 
