Push - Update sub games name/pic

--- a/game3.html
+++ b/game3.html
@@ -136,9 +136,9 @@
 
                               <div class="col">
                                 <div class="card gameCol">
-                                    <a href="game4.html"><img src="img/game4.png" class="card-img-top" alt="..."></a>
+                                    <a href=""><img src="img/dummyGame2.png" class="card-img-top" alt="..."></a>
                                   <div class="card-body bgName p-1">
-                                    <h5 class="card-title fs-6 text-center gameTittle">Typing Game</h5>
+                                    <h5 class="card-title fs-6 text-center gameTittle">Ninja Game</h5>
                                   </div>
                                 </div>
                               </div>
